# showtape

./: .gitignore  ARCHITECTURE.md  README.md  claudeman-profile.json  pyproject.toml  record_demo.py  setup.sh
.claude/claudeman/profiles/: showtape.json
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml
demos/: .env  browser-session.yaml  example.yaml  multi-layout.yaml  paste-demo.yaml  paste.yaml  record-false.yaml  sessions-demo.yaml  sessions.yaml  terminal-sessions-v2.yaml  terminal-sessions.yaml
feature/: devcontainer-feature.json  install.sh
feature/showtape/: devcontainer-feature.json  install.sh
scripts/: bump-version.sh  check-version-sync.sh
src/showtape/: __init__.py  __main__.py  cli.py  recorder.py
